k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: book-review-app
spec:
  selector:
    app: book-review-app
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
  type: NodePort
